cleanup sonarqube messages