@@ -6,14 +6,13 @@ import lombok.Getter;
 import org.jooq.Condition;
 import org.jooq.DSLContext;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 public abstract class CompositeQuery implements Query {
 
     List<Query> children;
 
-    public CompositeQuery(List<Query> children) {
+    protected CompositeQuery(List<Query> children) {
         this.children = children;
     }
 
@@ -22,7 +21,7 @@ public abstract class CompositeQuery implements Query {
         // Convert all child queries to conditions recursively
         List<Condition> childConditions = children.stream()
                 .map(child -> child.toCondition(dsl, operatorFactory))
-                .collect(Collectors.toList());
+                .toList();
 
         // Combine them using subclass-specific logic (AND / OR)
         return combineConditions(childConditions);
